2nd setup finished

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sepulveda App</title>
   </head>
-  <body>
+  <body class="text-blueGray-700 antialiased">
     <div id="app"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
