Add Catalogo de Bienes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/sepulveda.png" />
@@ -8,7 +8,7 @@
   </head>
   <body class="text-blueGray-700 antialiased">
     <div id="app"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script> -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
